# ncman

./: .gitignore  DESIGN.txt  README.md  meson.build
inc/: agent.h  commands.h  dbus_helpers.h  dbus_json.h  json_utils.h  ncurses_utils.h  popup.h  renderers.h  special_win.h  string_utils.h
src/: agent.c  commands.c  dbus_helpers.c  dbus_json.c  engine.c  json_regex.c  json_utils.c  keys.c  loop.c  main.c  ncurses_utils.c  popup.c  renderers.c  special_win.c  string_utils.c  ui.c
